cmd/third-gateway/k8s/01-third-gateway.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: third-gateway
  namespace: kube-system
spec:
  replicas: 2
  selector:
    matchLabels:
      app: third-gateway
  template:
    metadata:
      labels:
        app: third-gateway
    spec:
      containers:
      - name: third-gateway
        image: uhub.service.ucloud.cn/entropypool/third-gateway:latest
        imagePullPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: third-gateway
  namespace: kube-system
spec:
  ports:
  - name: http
    port: 50260
    targetPort: 50260
  - name: grpc
    port: 50261
    targetPort: 50261
  - name: prometheus
    port: 50262
    targetPort: 50262
  selector:
    app: third-gateway
